moved flutter into sub dir for the ffi

--- a/flutter/rust/Cargo.toml
+++ b/flutter/rust/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 
 [dependencies]
 # own crypto lib
-sendclose_crypto = {version = "0.1.0", path = "../crypto"}
+sendclose_crypto = {version = "0.1.0", path = "../../crypto" }
