--- a/flutter/rust/Cargo.toml
+++ b/flutter/rust/Cargo.toml
@@ -5,6 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "sendclose_flutter"
+crate-type = ["cdylib"]
+
 [dependencies]
 # own crypto lib
 sendclose_crypto = {version = "0.1.0", path = "../../crypto" }
+
+# flutter ffi
+flutter_rust_bridge = "1"
