added code from rust bridge

--- a/flutter/rust/Cargo.toml
+++ b/flutter/rust/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [lib]
 name = "sendclose_flutter"
-crate-type = ["cdylib"]
+crate-type = ["staticlib", "cdylib"]
 
 [dependencies]
 # own crypto lib
