--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 aes-gcm = "0.9.4"
 p256 = { version = "0.11.0", default-features = false, features = ["ecdh"] }
 rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
+sha2 = "0.10.2"
