--- a/wasm/Cargo.toml
+++ b/wasm/Cargo.toml
@@ -17,3 +17,6 @@ getrandom = { version = "0.2", features = ["js"] }
 
 # wasm dep
 wasm-bindgen = "0.2.74"
+
+# sha2 with non std
+sha2 = { version = "0.10", default-features = false }
