--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 aes-gcm = "0.9.4"
-p256 = { version = "0.11.0", default-features = false, features = ["ecdh"] }
+# pre here because we must use rand_core version 0.6.3 under the hood but the actual version of x25519-dalek uses version 0.5
+x25519-dalek = "2.0.0-pre.1"
 rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
 sha2 = "0.10.2"
+hkdf = "0.12.3"
