--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -12,3 +12,5 @@ x25519-dalek = "2.0.0-pre.1"
 rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
 sha2 = "0.10.2"
 hkdf = "0.12.3"
+argon2 = "0.3"
+base64 = "0.13.0"
