--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+sendclose_crypto_common = {version = "0.1.0", path = "../crypto_common"}
+
 aes-gcm = "0.9.4"
 # pre here because we must use rand_core version 0.6.3 under the hood but the actual version of x25519-dalek uses version 0.5
 x25519-dalek = "2.0.0-pre.1"
@@ -14,4 +16,11 @@ rand_core = { version = "0.6.3", default-features = false, features = ["getrando
 sha2 = "0.10.2"
 hkdf = "0.12.3"
 argon2 = "0.3"
-base64ct = {version = "1.0.1", default-features = false, features = ["alloc"]}
+
+# key and data export
+base64ct = {version = "1.0.1", default-features = false, features = ["alloc"]}  # must use this version because it is not comp. with password_hash from argon2
+pem-rfc7468 = {version = "0.3.1", features = ["alloc"]}
+
+[features]
+default = []
+rust = []
