--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2021"
 [dependencies]
 aes-gcm = "0.9.4"
 # pre here because we must use rand_core version 0.6.3 under the hood but the actual version of x25519-dalek uses version 0.5
-x25519-dalek = "2.0.0-pre.1"
-ed25519-dalek = {version = "1.0.1", default-features = false}
+curve25519-dalek = {version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"]}
+x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
+ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
 rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
-sha2 = "0.10.2"
-hkdf = "0.12.3"
+sha2 = { version = "0.10.2", default-features = false }
+hkdf = { version = "0.12.3", default-features = false }
 argon2 = "0.3"
