--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -15,3 +15,7 @@ rand_core = { version = "0.6.3", default-features = false, features = ["getrando
 sha2 = { version = "0.10.2", default-features = false }
 hkdf = { version = "0.12.3", default-features = false }
 argon2 = "0.3"
+
+[features]
+default = ["argon2_aes_ecies_ed25519"]
+argon2_aes_ecies_ed25519 = []
