--- a/implementation/js/sentc_wasm/Cargo.toml
+++ b/implementation/js/sentc_wasm/Cargo.toml
@@ -21,3 +21,16 @@ wasm-bindgen = "0.2.74"
 
 # sha2 with non std
 sha2 = { version = "0.10", default-features = false }
+
+wasm-bindgen-futures = "0.4.31"
+
+[dependencies.web-sys]
+version = "0.3.4"
+features = [
+    'Headers',
+    'Request',
+    'RequestInit',
+    'RequestMode',
+    'Response',
+    'Window',
+]
