--- a/implementation/js/sentc_wasm/package.json
+++ b/implementation/js/sentc_wasm/package.json
@@ -23,13 +23,18 @@
     "build": "tsc -p tsconfig.app.json",
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "webpack": "webpack",
+    "webpack-watch": "webpack --watch"
   },
   "devDependencies": {
     "@joernheinemann/eslint-config-typescript": "git+https://gitlab+gitlab+deploy-token-721488:57myipLxDruvdHLZQccB@gitlab.com/joern.heinemann/eslint-config-typescript.git",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
     "eslint": "^7.32.0",
-    "typescript": "^4.1.2"
+    "ts-loader": "^8.0.11",
+    "typescript": "^4.1.2",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0"
   }
 }
