split server fn into new mod with a feature

--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -19,4 +19,5 @@ serde = { version = "1.0", default-features = false, features = ["derive", "allo
 
 [features]
 default = ["serde_json"]
+server = []
 rust = []
