--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -20,4 +20,5 @@ serde = { version = "1.0", default-features = false, features = ["derive", "allo
 [features]
 default = ["serde_json"]
 server = []
+server_test = []
 rust = []
