--- a/implementation/js/sentc_wasm/Cargo.toml
+++ b/implementation/js/sentc_wasm/Cargo.toml
@@ -12,6 +12,8 @@ crate-type = ["cdylib"]
 # own crypto lib
 sentc-crypto = {version = "0.1.0", path = "../../../crypto", features = ["server"]}
 
+sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full"}
+
 # must be js feature for wasm
 getrandom = { version = "0.2", features = ["js"] }
 
