--- a/implementation/js/sentc_wasm/Cargo.toml
+++ b/implementation/js/sentc_wasm/Cargo.toml
@@ -18,10 +18,12 @@ sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full", default-f
 getrandom = { version = "0.2", features = ["js"] }
 
 # wasm dep
-wasm-bindgen = "0.2.74"
+wasm-bindgen = {version = "0.2.74", features = ["serde-serialize"]}
 #js-sys = "0.3.58"
 
 # sha2 with non std
 sha2 = { version = "0.10", default-features = false }
 
 wasm-bindgen-futures = "0.4.31"
+
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}
