--- a/implementation/dart/sentc/rust/Cargo.toml
+++ b/implementation/dart/sentc/rust/Cargo.toml
@@ -11,7 +11,7 @@ crate-type = ["staticlib", "cdylib"]
 
 [dependencies]
 # own crypto lib
-sentc-crypto = {version = "0.1.0", path = "../../../../crypto", features = ["server"] }
+sentc-crypto = {version = "0.1.0", path = "../../../../crypto"}
 
 sentc-crypto-full = {version = "0.1.0", path = "../../../../crypto_full"}
 
