--- a/implementation/js/sentc_js/package.json
+++ b/implementation/js/sentc_js/package.json
@@ -18,7 +18,7 @@
     "url": "https://github.com/sentclose/sentc/issues"
   },
   "homepage": "https://sentclose.com/",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc -p tsconfig.app.json",
     "prepare": "npm run build",
