--- a/implementation/js/sentc_wasm/package.json
+++ b/implementation/js/sentc_wasm/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "babel": "babel pkg --out-file pkg/sentc_wasm_cjs.js"
+    "babel_node": "babel pkg/sentc_wasm.js --out-file pkg/sentc_wasm_cjs.js --plugins babel-plugin-transform-import-meta",
+    "babel_browser": "babel pkg/sentc_wasm.js --out-file pkg/sentc_wasm_bjs.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,7 @@
     "@babel/cli": "^7.18.10",
     "@babel/core": "^7.18.10",
     "@babel/plugin-transform-modules-commonjs": "^7.18.6",
-    "@babel/preset-env": "^7.18.10"
+    "@babel/preset-env": "^7.18.10",
+    "babel-plugin-transform-import-meta": "^2.2.0"
   }
 }
