added webpack script for cdn

--- a/implementation/js/sentc_js/package.json
+++ b/implementation/js/sentc_js/package.json
@@ -24,8 +24,8 @@
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
-    "webpack": "webpack",
-    "webpack-watch": "webpack --watch"
+    "export_cdn": "webpack --config webpack/cdn_webpack.config.js",
+    "test_web_module": "webpack --config webpack/lib_webpack.config.js"
   },
   "dependencies": {
     "idb": "^6.1.4",
