--- a/implementation/js/sentc_js/package.json
+++ b/implementation/js/sentc_js/package.json
@@ -35,7 +35,11 @@
     "@joernheinemann/eslint-config-typescript": "1.0.0",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "chai": "^4.2.0",
     "eslint": "^7.32.0",
+    "mocha": "^10.0.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.1.2",
     "webpack": "^5.6.0",
