--- a/implementation/js/sentc_js/package.json
+++ b/implementation/js/sentc_js/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://sentclose.com/",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -p tsconfig.app.json",
+    "build": "tsc -p tsconfig.build.json",
     "prepare": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --ext .ts",
