added LICENSE and more infos

--- a/implementation/js/sentc_wasm/Cargo.toml
+++ b/implementation/js/sentc_wasm/Cargo.toml
@@ -2,6 +2,9 @@
 name = "sentc_wasm"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "Wasm for sentc. End-to-end encryption sdk"
+authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
