--- a/implementation/js/sentc_wasm/package.json
+++ b/implementation/js/sentc_wasm/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "babel_node": "babel pkg/sentc_wasm.js --out-file pkg/sentc_wasm_cjs.js --plugins babel-plugin-transform-import-meta",
-    "babel_browser": "babel pkg/sentc_wasm.js --out-file pkg/sentc_wasm_bjs.js"
+    "babel_browser": "babel pkg/sentc_wasm.js --out-file pkg/sentc_wasm_bjs.js",
+    "babel": "npm run babel_browser && npm run babel_node"
   },
   "keywords": [],
   "author": "",
