--- a/implementation/js/sentc_wasm/pkg/package.json
+++ b/implementation/js/sentc_wasm/pkg/package.json
@@ -5,7 +5,7 @@
     "Jörn Heinemann <j.heinemann@sentclose.com>"
   ],
   "description": "Wasm for sentc. End-to-end encryption sdk",
-  "version": "0.4.4",
+  "version": "0.5.0-rc.1",
   "license": "MIT",
   "files": [
     "sentc_wasm_cjs.js",
