--- a/implementation/dart/sentc_flutter_rust/Cargo.toml
+++ b/implementation/dart/sentc_flutter_rust/Cargo.toml
@@ -13,7 +13,7 @@ crate-type = ["staticlib", "cdylib"]
 # own crypto lib
 sentc-crypto = {version = "0.1.0", path = "../../../crypto"}
 
-sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full", default-features = false, features = ["default_rustls"]}
+sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full", features = ["rustls"]}
 
 sentc-crypto-common = {version = "0.1.0", path = "../../../sdk-common"}
 
