--- a/implementation/js/sentc_wasm/Cargo.toml
+++ b/implementation/js/sentc_wasm/Cargo.toml
@@ -15,7 +15,7 @@ crate-type = ["cdylib"]
 # own crypto lib
 sentc-crypto = {version = "0.1.0", path = "../../../crypto"}
 
-sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full", default-features = false, features = ["wasm"]}
+sentc-crypto-full = {version = "0.1.0", path = "../../../crypto_full", features = ["wasm"]}
 
 sentc-crypto-common = {version = "0.1.0", path = "../../../sdk-common"}
 
