--- a/implementation/dart/sentc_flutter_rust/Cargo.toml
+++ b/implementation/dart/sentc_flutter_rust/Cargo.toml
@@ -19,6 +19,8 @@ sentc-crypto-common = {version = "0.1.0", path = "../../../sdk-common"}
 
 tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
 
+once_cell = "1.17.0"
+
 # flutter ffi
 flutter_rust_bridge = "1"
 
