--- a/implementation/dart/sentc_flutter_rust/Cargo.toml
+++ b/implementation/dart/sentc_flutter_rust/Cargo.toml
@@ -22,6 +22,6 @@ tokio = { version = "1.14.0", features = ["rt-multi-thread"] }
 once_cell = "1.17.0"
 
 # flutter ffi
-flutter_rust_bridge = "1"
+flutter_rust_bridge = "^1.61.0"
 
 anyhow="1.0.58"
