--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -14,6 +14,7 @@ ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_
 rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
 sha2 = { version = "0.10.2", default-features = false }
 hkdf = { version = "0.12.3", default-features = false }
+hmac = "0.12.1"
 argon2 = "0.3"
 
 [features]
