--- a/implementation/js/sentc_wasm/pkg/package.json
+++ b/implementation/js/sentc_wasm/pkg/package.json
@@ -5,8 +5,8 @@
     "Jörn Heinemann <j.heinemann@sentclose.com>"
   ],
   "description": "Wasm for sentc. End-to-end encryption sdk",
-  "version": "0.5.0-rc.1",
-  "license": "MIT",
+  "version": "0.6.0",
+  "license": "AGPL-3.0",
   "files": [
     "sentc_wasm_cjs.js",
     "sentc_wasm_bjs.js",
