remove old common submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,6 @@
-[submodule "sdk-common"]
-	path = sdk-common
-	url = git@gitlab.com:sentclose/sentc/sdk-common.git
 [submodule "implementation/js/sentc_js"]
 	path = implementation/js/sentc_js
-	url = git@gitlab.com:sentclose/sentc/sdk-implementations/sentc-javascript.git
+	url = git@github.com:sentclose/sentc-javascript.git
 [submodule "implementation/dart/sentc_flutter"]
 	path = implementation/dart/sentc_flutter
-	url = git@gitlab.com:sentclose/sentc/sdk-implementations/sentc-flutter.git
+	url = git@github.com:sentclose/sentc-flutter.git
