--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ members = [
 ]
 
 [workspace.dependencies]
-sentc-crypto-common = "0.1.1"
+sentc-crypto-common = "0.1.2"
+#sentc-crypto-common = { version="0.1.2", path = "../backend/sentc-api/sdk-common" }    # for local dev
 
 [profile.dev]
 # Must always use panic = "abort" to avoid needing to define the unstable eh_personality lang item.
