--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -1,12 +1,17 @@
 [package]
 name = "sentc-crypto"
-version = "0.1.0"
+version = "0.8.0"
 edition = "2021"
+description = "The main implementation of the sentc sdk."
+license-file = "../LICENSE"
+authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
+homepage = "https://sentc.com/"
+documentation = "https://sentc.com/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sentc-crypto-core = {version = "0.1.0", path = "../crypto_core"}
+sentc-crypto-core = {version = "0.8.0", path = "../crypto_core"}
 sentc-crypto-common = {workspace=true}
 
 # key and data export
