--- a/crypto_full/Cargo.toml
+++ b/crypto_full/Cargo.toml
@@ -1,13 +1,24 @@
 [package]
 name = "sentc-crypto-full"
-version = "0.1.0"
+version = "0.8.0"
 edition = "2021"
+description = "The network implementation for the sentc sdk."
+license-file = "../LICENSE"
+authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
+homepage = "https://sentc.com/"
+documentation = "https://sentc.com/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+include = [
+    "Cargo.toml",
+    "LICENSE",
+    "src/**/*",
+]
+
 [dependencies]
 # own crypto lib
-sentc-crypto = {version = "0.1.0", path = "../crypto", default-features = false}
+sentc-crypto = {workspace=true}
 
 sentc-crypto-common = {workspace=true}
 
