--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -7,6 +7,7 @@ license-file = "../LICENSE"
 authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
 homepage = "https://sentc.com/"
 documentation = "https://sentc.com/"
+repository = "https://github.com/sentclose/sentc"
 
 include = [
     "Cargo.toml",
