--- a/implementation/js/sentc_wasm/Cargo.toml
+++ b/implementation/js/sentc_wasm/Cargo.toml
@@ -8,6 +8,7 @@ license-file = "../../../LICENSE"
 authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]
 homepage = "https://sentc.com/"
 documentation = "https://sentc.com/"
+repository = "https://github.com/sentclose/sentc"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
