--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -26,6 +26,7 @@ sha2 = { version = "0.10.2", default-features = false }
 hkdf = { version = "0.12.3", default-features = false }
 hmac = "0.12.1"
 argon2 = "0.3"
+ope = "0.1.1"
 
 [features]
 default = ["argon2_aes_ecies_ed25519", "default_env"]
