--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -12,7 +12,8 @@ repository = "https://github.com/sentclose/sentc"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sentc-crypto-core = {version = "0.9.0", path = "../crypto_core"}
+sentc-crypto-core = {workspace=true}
+sentc-crypto-utils = {workspace=true}
 sentc-crypto-common = {workspace=true}
 
 # key and data export
