--- a/crypto_full/Cargo.toml
+++ b/crypto_full/Cargo.toml
@@ -23,6 +23,8 @@ sentc-crypto = {workspace=true}
 
 sentc-crypto-common = {workspace=true}
 
+sentc-crypto-utils = {workspace=true, optional = true}
+
 #_______________________________________________________________________________________________________________________
 # req handling
 reqwest = {version = "0.11.18", optional = true, default-features = false}
@@ -44,7 +46,7 @@ serde = { version = "1.0", default-features = false, features = ["derive", "allo
 [features]
 default = ["sentc-crypto/default", "rustls"]
 
-rust = ["sentc-crypto/rust"]
+rust = ["sentc-crypto/rust", "sentc-crypto-utils"]
 
 # req handling
 default_tls = ["reqwest/default"]
