--- a/implementation/js/sentc_wasm/Cargo.toml
+++ b/implementation/js/sentc_wasm/Cargo.toml
@@ -19,7 +19,7 @@ crate-type = ["cdylib"]
 # own crypto lib
 sentc-crypto = {workspace=true, features = ["default"]}
 
-sentc-crypto-full = {workspace=true, features = ["wasm"]}
+sentc-crypto-full = {workspace=true, features = ["default","wasm"]}
 
 sentc-crypto-common = {workspace=true}
 
