added group to light sdk full version

--- a/crypto_light_full/Cargo.toml
+++ b/crypto_light_full/Cargo.toml
@@ -22,6 +22,10 @@ sentc-crypto-common = {workspace=true}
 sentc-crypto-light = {workspace=true}
 sentc-crypto-utils = {workspace=true}
 
+# json handling
+serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}
+
 [features]
 default = ["sentc-crypto-light/default", "rustls"]
 
