--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "implementation/js/sentc_js_light"]
 	path = implementation/js/sentc_js_light
 	url = https://github.com/sentclose/sentc-javascript-light.git
+[submodule "implementation/dart/sentc_flutter_light"]
+	path = implementation/dart/sentc_flutter_light
+	url = https://github.com/sentclose/sentc-flutter-light.git
