move common user full fn to utils to share it with sdk and sdk light

--- a/crypto_full/Cargo.toml
+++ b/crypto_full/Cargo.toml
@@ -24,7 +24,7 @@ sentc-crypto = {workspace=true}
 
 sentc-crypto-common = {workspace=true}
 
-sentc-crypto-utils = {workspace=true}
+sentc-crypto-utils = {workspace=true, features = ["crypto_full"]}
 
 #_______________________________________________________________________________________________________________________
 
