--- a/implementation/js/sentc_wasm_light/pkg/package.json
+++ b/implementation/js/sentc_wasm_light/pkg/package.json
@@ -6,7 +6,7 @@
   ],
   "description": "Wasm for sentc. End-to-end encryption sdk light",
   "version": "0.10.0",
-  "license": "SEE LICENSE IN LICENSE",
+  "license": "AGPL-3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/sentclose/sentc"
