--- a/crypto_utils/Cargo.toml
+++ b/crypto_utils/Cargo.toml
@@ -10,6 +10,12 @@ repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+include = [
+    "Cargo.toml",
+    "../LICENSE",
+    "src/**/*",
+]
+
 [dependencies]
 sentc-crypto-common = {workspace=true}
 
