--- a/crypto_full/Cargo.toml
+++ b/crypto_full/Cargo.toml
@@ -14,7 +14,7 @@ description = "The network implementation for the sentc sdk."
 
 include = [
     "Cargo.toml",
-    "LICENSE",
+    "../LICENSE",
     "src/**/*",
 ]
 
