--- a/crypto_utils/Cargo.toml
+++ b/crypto_utils/Cargo.toml
@@ -10,6 +10,8 @@ repository.workspace = true
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+description = "Common types and functions for sentc sdk and sdk light"
+
 include = [
     "Cargo.toml",
     "../LICENSE",
