--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -10,7 +10,11 @@ repository.workspace = true
 
 description = "The main implementation of the sentc sdk."
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+include = [
+    "Cargo.toml",
+    "../LICENSE",
+    "src/**/*",
+]
 
 [dependencies]
 sentc-crypto-core = {workspace=true}
