--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -27,7 +27,7 @@ hmac = "0.12.1"
 argon2 = "0.3"
 ope = "0.1.1"
 pqc_kyber = {version = "0.7.1", features = ["90s-fixslice", "std"]}
-pqc_dilithium_edit = {path = "../../dilithium", features = ["mode3", "aes", "random_signing"]}
+pqc_dilithium_edit = {version = "0.2.0", features = ["mode3", "aes", "random_signing"]}
 
 [features]
 default = ["argon2_aes_ecies_ed25519_kyber_hybrid", "default_env"]
