rewrite the keys usage

--- a/crypto_core/Cargo.toml
+++ b/crypto_core/Cargo.toml
@@ -17,7 +17,7 @@ include = [
 [dependencies]
 aes-gcm = "0.9.4"
 # pre here because we must use rand_core version 0.6.3 under the hood but the actual version of x25519-dalek uses version 0.5
-curve25519-dalek = {version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"]}
+curve25519-dalek = { version = "3.2.0", default-features = false, features = ["u64_backend", "alloc"] }
 x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
 ed25519-dalek = { version = "1.0.1", default-features = false, features = ["u64_backend"] }
 rand_core = { version = "0.6.3", default-features = false, features = ["getrandom"] }
@@ -26,16 +26,28 @@ hkdf = { version = "0.12.3", default-features = false }
 hmac = "0.12.1"
 argon2 = "0.3"
 ope = "0.1.1"
-pqc_kyber = {version = "0.7.1", features = ["90s-fixslice", "std"]}
-pqc_dilithium_edit = {version = "0.2.0", features = ["mode3", "aes", "random_signing"]}
+pqc_kyber = { version = "0.7.1", features = ["90s-fixslice", "std"] }
+pqc_dilithium_edit = { version = "0.2.0", features = ["mode3", "aes", "random_signing"] }
 
 [features]
-default = ["argon2_aes_ecies_ed25519_kyber_hybrid", "default_env"]
+default = ["aes", "ecies_kyber_hybrid", "hmac_sha256", "ope_sort", "default_env"]
 
-# Descibe the used alg for encryption and signing
-argon2_aes_ecies_ed25519 = []
+# symmetric encryption
+aes = []
 
-argon2_aes_ecies_ed25519_kyber_hybrid = []
+# asymmetric encryption
+ecies = []
+ecies_kyber_hybrid = []
+
+# sign
+ed25519 = []
+ed25519_dilithium_hybrid = []
+
+# searchable
+hmac_sha256 = []
+
+# sortable
+ope_sort = []
 
 # Descibe the used env for the crng
 default_env = []
