--- a/crypto/Cargo.toml
+++ b/crypto/Cargo.toml
@@ -17,17 +17,17 @@ include = [
 ]
 
 [dependencies]
-sentc-crypto-core = {workspace=true}
-sentc-crypto-utils = {workspace=true}
-sentc-crypto-common = {workspace=true}
+sentc-crypto-core = { workspace = true }
+sentc-crypto-utils = { workspace = true, features = ["encryption"] }
+sentc-crypto-common = { workspace = true }
 
 # key and data export
-base64ct = {version = "1.0.1", default-features = false, features = ["alloc"]}  # must use this version because it is not comp. with password_hash from argon2
-pem-rfc7468 = {version = "0.3.1", features = ["alloc"]}
+base64ct = { version = "1.0.1", default-features = false, features = ["alloc"] }  # must use this version because it is not comp. with password_hash from argon2
+pem-rfc7468 = { version = "0.3.1", features = ["alloc"] }
 
 # json handling
-serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
-serde = { version = "1.0", default-features = false, features = ["derive", "alloc"]}
+serde_json = { version = "1.0.81", default-features = false, features = ["alloc"] }
+serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
 
 [features]
 default = []
